styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {  
  scroll-behavior: smooth;  
}

a{
  text-decoration: none;
  color: #333333;
}

@font-face {
  font-family: ProximaNova;
  src: url("./Proxima Nova Font.otf");
}

@font-face {
  font-family: ProximaExtraBold;
  src: url("./Metropolis-ExtraBold.otf");
}

@font-face {
  font-family: ProximaBold;
  src: url("./Metropolis-Bold.otf");
}

@font-face {
  font-family: ProximaMedium;
  src: url("./Metropolis-Medium.otf");
}

@font-face {
  font-family: ProximaLight;
  src: url("./Metropolis-Light.otf");
}

@font-face {
  font-family: ProximaExtraLight;
  src: url("./Metropolis-ExtraLight.otf");
}

@font-face {
  font-family: ProximaThin;
  src: url("./Metropolis-Thin.otf");
}

.top_page {
  background-color: #e5e5e5;
  height: 200%;
}

.navbar {
  padding: 2rem 0rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  max-width: 1090px;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (max-width: 1200px) {
  .navbar {
    padding: 2rem 6rem;
  }
}

@media screen and (max-width: 800px) {
  .navbar {
    padding: 2rem 1.5rem;
  }
}



@media screen and (max-width: 300px) {
  .navbar {
    padding: 1rem .5rem;
  }
}

.navbar_logo_side {
  display: flex;
}

.navbar_logo {
  height: 1.3rem;
}

.navbar_logo_text {
  height: 1.6rem;
}

.navbar_right_side {
  text-align: right;
  font-weight: 400;
  font-family: ProximaNova;
  font-size: 20px;
  align-self: self-end;
}

.hero {
  padding: 2rem 0rem;
  text-align: center;
  max-width: 1090px;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (max-width: 1200px) {
  .hero {
    padding: 2rem 6rem;
  }
}

@media screen and (max-width: 800px) {
  .hero {
    padding: 2rem 1.5rem;
  }
}

@media screen and (max-width: 450px){
  .hero {
    padding: 2rem 0.5rem;
  }
}

.hero_text {
  display: flex;
  gap: 0.5rem;
  max-width: 900px;
  margin-left: auto;
  margin-right: auto;
}

.hero_firstline_text {
  font-family: ProximaBold;
  font-size: 50px;
  color: #131313;
  line-height: 76px;
}

@media screen and (max-width: 450px){
  .hero_firstline_text {
    font-size: 35px;
    line-height: 56px;
  }  
}

.rectangle {
  width: 50px;
  height: 50px;
  position: absolute;
  z-index: 1;
}
.rectangle_second {
  width: 50px;
  height: 50px;
  position: relative;
  left: 40px;
}
.rectangle_third {
  width: 50px;
  height: 50px;
  z-index: -1;
}

.rectangle_others {
  width: 70px;
  height: 70px;
  vertical-align: middle;
}

@media screen and (max-width: 450px){
  
.rectangle_others {
  width: 50px;
  height: 50px;
  vertical-align: middle;
}
}

@media (min-width: 800px) and (max-width: 20080px) {
  .before_image{
    display: none
  }  

}


.hero_body {
  margin-top: 3rem;
  font-family: ProximaThin;
  font-style: normal;
  font-size: 30px;
  line-height: 122%;
  color: #131313;
  padding: 0 8rem;
}

@media screen and (max-width: 800px) {
  .hero_body {
    padding: 0rem 2rem;
  }
}

@media screen and (max-width: 450px){
  .hero_body{
    padding: 0rem .5rem;
    font-size: 22px;
    color: #131313;
  }
}

.hero_button {
  padding: 0.8rem 2rem;
  border-radius: 1.6rem;
  background: #f1c311;
  margin-top: 3rem;
  font-size: 1.2rem;
  border: solid 1px;
}
.hero_button:hover{
  background-color: #ffe47a;
  padding: 0.8rem 2rem;
  border-radius: 1.6rem;
  margin-top: 3rem;
  font-size: 1.2rem;
}

.hero_two {
  margin: 2rem 0rem;
  background-color: white;
  border-radius: 2rem;
  padding: 2rem 0 0 4rem;
  height: 29rem;
  max-width: 1090px;
  margin-left: auto;
  margin-right: auto;
}

@media screen and (max-width: 1350px) {
  .hero_two {
    margin: 2rem 8rem;
  }
}

@media screen and (max-width: 1100px) {
  .hero_two {
    margin: 2rem 1.5rem;
  }
}

@media screen and (max-width: 800px) {
  .hero_two {
    display: grid;
    grid-template-columns: 1fr;
    margin: 2rem 1.5rem;
  }
}

.hero_two_left {
  margin-top: 5rem;
}


.hero_two_right {
  height: 100%;
  position: relative;
  left: 55%;
  bottom: 70%;
}

@media screen and (max-width: 1325px) {
  .hero_two_right {
    height: 400px;
    position: relative;
    left: 50%;
    bottom: 68%;
  }
}

@media screen and (max-width: 1000px) {
  .hero_two_right {
    height: 400px;
    position: relative;
    left: 40%;
    bottom: 68%;
  }
}

@media screen and (max-width: 870px) {
  .hero_two_right {
    height: 310px;
    position: relative;
    left: 45%;
    bottom: 70%;
  }
}

@media screen and (max-width: 800px) {
  .hero_two_right {
    bottom: 100%;
  }
}


@media (min-width: 750px) and (max-width: 20080px) {

  .hero_two_left_title {
    font-family: ProximaBold;
    width: 50%;
    margin-bottom: 1rem;
    line-height: 2.5rem;
  }
  
  .hero_two_left_text {
    font-family: ProximaLight;
    width: 50%;
    font-size: 25px;
  }
  
}

@media screen and (max-width: 749px){
  .hero_two_left_title {
    font-family: ProximaBold;
    margin-bottom: 1rem;
    line-height: 2.5rem;
  }
  
  .hero_two_left_text {
    font-family: ProximaLight;
    font-size: 25px;
  }
  
}

@media screen and (max-width: 450px){
  .hero_two_left_title{
    line-height: 2rem;
    font-size: 27px;
  }

  .hero_two_left_text {
    font-family: ProximaLight;
    font-size: 20px;
  }

}


@media screen and (max-width: 750px) {
  .hero_two {
    display: grid;
    grid-template-columns: 1fr;
    margin: 2rem 1.5rem;
    text-align: center;
    padding: 2rem 2rem;
    height: 21.7%;
  }

  .hero_two_left {
    margin-top: 2rem;
    text-align: center;
  }

  .hero_two_right {
    height: 300px;
    position: relative;
    left: auto;
    justify-self: center;
    top: 10%;
  }

}

@media screen and (max-width: 450px) {
  .hero_two {
    margin: 1rem .5rem;
    text-align: center;
    padding: 2rem .5rem;
    
  }

  .hero_two_right {
    height: 200px;
    position: relative;

    left: auto;
    justify-self: center;
    top: 16%;
  }

}
/* ... */

